--- a/bayhac2014-cryptmail.cabal
+++ b/bayhac2014-cryptmail.cabal
@@ -47,8 +47,6 @@ Library
         base == 4.*,
         base-unicode-symbols >= 0.2.2.4,
         transformers >= 0.3.0.0,
-        unordered-containers >= 0.2.3.3,
-        errors >= 1.4.6,
         containers >= 0.5.0.0
 
     if flag(haste)
@@ -58,7 +56,7 @@ Library
         build-depends:
             QuickCheck >= 2.7.3,
             base64-bytestring >= 1.0.0.1,
-            bytestring >= 0.10.4.0,
+            bytestring >= 0.10.0.2,
             cipher-aes >= 0.2.7,
             crypto-random >= 0.0.7,
             cryptohash >= 0.11.4,
@@ -69,6 +67,7 @@ Library
             cabal-test-quickcheck >= 0.1.1,
             attoparsec >= 0.10.4.0,
             aeson >= 0.7.0.3,
+            unordered-containers >= 0.2.3.3,
             vector >= 0.10.9.1
 
     ghc-options: -Wall
@@ -86,9 +85,7 @@ Executable cryptmail-client
             base == 4.*,
             bayhac2014-cryptmail,
             base-unicode-symbols >= 0.2.2.4,
-            haste-lib >= 0.1,
-            transformers >= 0.3.0.0,
-            errors >= 1.4.6
+            haste-lib >= 0.1
 
     ghc-options: -Wall --start=asap --with-js=lib/sjcl.js,lib/bayhac2014-cryptmail.js
 
